syntax="proto3";

package platform.proto.productapi;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "common.proto";

option go_package = "github.com/thangchung/go-coffeeshop/proto/gen";

service UserService {
  rpc GetItemTypes(GetItemTypesRequest) returns (GetItemTypesResponse) {
    option (google.api.http) = {
      get: "/v1/api/item-types"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List item types"
      description: "List all item types on the server."
      tags: "ItemTypes"
    };
  }

  rpc GetItemsByType(GetItemsByTypeRequest) returns (GetItemsByTypeResponse) {
    option (google.api.http) = {
      get: "/v1/api/items-by-types/{item_types}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List items by type"
      description: "List items by type on the server."
      tags: "ItemTypes"
    };
  }

  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {
    option (google.api.http) = {
      get: "/v1/api/get-users"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "获取用户信息"
      description: "用户信息"
      tags: "用户"
    };
  }
  rpc GetDeletedOrders(GetDeletedOrdersRequest) returns (GetDeletedOrdersResponse) {
    option (google.api.http) = {
      get: "/v1/api/deleted-orders"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "获取删除的订单"
      description: "删除订单"
      tags: "订单"
    };
  }
  rpc DeleteOrders(DeleteOrdersRequest) returns (DeleteOrdersResponse) {
    option (google.api.http) = {
      post: "/v1/api/delete-orders"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "删除的订单"
      description: "删除订单"
      tags: "订单"
    };
  }
}
message GetUsersRequest{
  repeated string id =1;
}
message GetUsersResponse {
  repeated UsersDto users = 1;

}
message GetDeletedOrdersRequest{}
message GetDeletedOrdersResponse {
  repeated OrderDtos orders = 1;

}
message DeleteOrdersRequest{
  int32 id=1;
}
message DeleteOrdersResponse {
   bool sunccess = 1;
}

message GetItemTypesRequest {}
message GetItemTypesResponse {
  repeated ItemTypeDto item_types = 1;
}

message GetItemsByTypeRequest{
  string item_types = 1;
}
message GetItemsByTypeResponse{
  repeated ItemDto items = 1;
}

message ItemDto {
  double price = 1;
  int32 type = 2;
}

message ItemTypeDto {
  string name = 1;
  int32 type = 2;
  double price = 3;
  string image = 4;
}
message OrderDtos {
    string id = 1;
    string order_num = 2;
    string order_status = 3;
    repeated DetailsDtos details = 4;
    UserDtos users = 5;
}
message UsersDto {
  int32 id =1;
  string user_name = 2;
  int32 type = 3;
  double price = 4;
}
message DetailsDtos {
    string id = 1;
    ProductDtos products= 2;
    int32 Quantity = 3;
    double amount = 4;
}

message ProductDtos {
    string  ProductName = 1;
    string Category= 2;
    float price = 3;
}

message UserDtos {
    string id = 1;
    string name = 2;
    string telephone = 3;
}
